# fitness-app-backend

./: .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
migrations/2024-07-18-114113_create_workout_db/: down.sql  up.sql
migrations/2024-07-21-054625_create_exercise_catalog/: down.sql  up.sql
migrations/2024-07-21-055000_exercise_catalog_add_unique/: down.sql  up.sql
migrations/2024-07-26-070441_edit_workout/: down.sql  up.sql
migrations/2024-07-27-092658_add_drop_cascade/: down.sql  up.sql
migrations/2024-07-27-093816_make_fields_not_null/: down.sql  up.sql
migrations/2024-08-08-123110_favorite_exercise/: down.sql  up.sql
migrations/2024-08-10-164427_add_difficulty_int_column/: down.sql  up.sql
src/: auth.rs  auth_handlers.rs  db.rs  handlers.rs  main.rs  models.rs  schema.rs  stats_handlers.rs  workout_handlers.rs
