[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.1", features = ["postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
jsonwebtoken = "8"
rand = "0.8"
chrono = "0.4"
rust-argon2 = "2.1"